# final-nn-CW

./: autoencoder_CW.ipynb  classifier_CW.ipynb  pyproject.toml
.github/workflows/: test.yml
nn/: __init__.py  nn.py  preprocess.py
test/: test_nn.py
